Added support for non-nullable value types, but seem to have broken reference types, doh!

--- a/BlazorLifeCycle/BlazorLifeCycle.csproj
+++ b/BlazorLifeCycle/BlazorLifeCycle.csproj
@@ -14,4 +14,10 @@
     <DotNetCliToolReference Include="Microsoft.AspNetCore.Blazor.Cli" Version="0.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Pages\CounterWithClass.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
