--- a/BlazorPersist/Properties/launchSettings.json
+++ b/BlazorPersist/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "BlazorLifeCycle": {
+    "BlazorPersist": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
