--- a/BlazorPersist/BlazorPersist.csproj
+++ b/BlazorPersist/BlazorPersist.csproj
@@ -15,6 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Pages\InputSample.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
     <Content Update="Pages\CounterWithClass.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
